out/old/manifests/okr-dep/Deployment.okr-backend.yaml
metadata:
  name: okr-backend
  namespace: okr-dep
  annotations:
    field.cattle.io/publicEndpoints: 'null'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: okr-backend
  template:
    metadata:
      labels:
        app: okr-backend
    spec:
      volumes:
      - name: time-zone
        hostPath:
          path: /usr/share/zoneinfo/Asia/Ho_Chi_Minh
          type: ''
      - name: okr-start
        secret:
          secretName: <REDACTED:env>
          defaultMode: 448
      containers:
      - name: okr-backend
        image: <COMPANY>-<DOMAIN_607>/okr/backend/okr_backend:16
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: '1'
            memory: 2Gi
          requests:
            cpu: 400m
            memory: 1Gi
        volumeMounts:
        - name: time-zone
          mountPath: /etc/localtime
        - name: okr-start
          mountPath: /opt/services/okr/<DOMAIN_700>
          subPath: <DOMAIN_700>
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 360
          timeoutSeconds: 3
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 6
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: <CLEANUP_HOST_6>
      securityContext: {}
      imagePullSecrets:
      - name: registrypullsecret
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
