out/old/manifests/okr-dep/StatefulSet.okr-mysql.yaml
metadata:
  name: okr-mysql
  namespace: okr-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: okr-mysql
  template:
    metadata:
      labels:
        app: okr-mysql
    spec:
      volumes:
      - name: okr-mysql-config
        configMap:
          name: mysql-conf
          defaultMode: 420
      containers:
      - name: okr-mysql
        image: <COMPANY>-<DOMAIN_607>/okr/base-images/mysql:8.0.25
        ports:
        - name: okr-mysql
          containerPort: 3306
          protocol: TCP
        resources:
          limits:
            cpu: '1'
            memory: 1536Mi
          requests:
            cpu: 100m
            memory: 1Gi
        volumeMounts:
        - name: okr-mysql-data
          mountPath: /var/lib/mysql
        - name: okr-mysql-config
          mountPath: /etc/mysql/<DOMAIN_752>
          subPath: <DOMAIN_752>
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: registrypullsecret
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: okr-mysql-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystem
  serviceName: okr-mysql
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
