out/old/manifests/okr-dep/Service.okr-be-expose.yaml
metadata:
  name: okr-be-expose
  namespace: okr-dep
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: okr-backend
  clusterIP: <IP_84>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
