out/old/manifests/okr-dep/Service.okr-fe-expose.yaml
metadata:
  name: okr-fe-expose
  namespace: okr-dep
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: okr-frontend
  clusterIP: <IP_85>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
